[package]
name = "signal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.44"
base64 = "0.13.0"
ascii85 = "0.2.1"
smaz = "0.1.0"
flate2 = "1.0.22"